refactor(ui): rebuild custom screens